--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start:new": "node --watch dist/index.js",
-    "server": "cross-env PORT=4300 nodemon dist/index.js",
+    "server": "cross-env PORT=8000 nodemon dist/index.js",
     "server2": "nodemon dist/index.js",
     "build": "tsc --watch",
     "start": "concurrently \"npm:server\" \"npm:build\"",
@@ -16,6 +16,7 @@
   "author": "Marco Fratini",
   "license": "ISC",
   "devDependencies": {
+    "@types/inquirer": "^9.0.3",
     "@types/jest": "^29.5.2",
     "@types/node": "^20.2.5",
     "@typescript-eslint/eslint-plugin": "^5.59.9",
@@ -35,6 +36,7 @@
   "dependencies": {
     "commander": "^10.0.1",
     "cross-env": "^7.0.3",
-    "dotenv": "^16.1.4"
+    "dotenv": "^16.1.4",
+    "inquirer": "^9.2.7"
   }
 }
