--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "author": "Marco Fratini",
   "license": "ISC",
   "devDependencies": {
+    "@types/commander": "^2.12.2",
     "@types/inquirer": "^9.0.3",
     "@types/jest": "^29.5.2",
     "@types/node": "^20.2.5",
